# rk3588-stream

rk3588_ai_stream/: CMakeLists.txt  CMakeLists.txt.bak_before_exp05_06
rk3588_ai_stream/docs/: 00_lubancat_demo_baseline.md  01_image_detect_migration.md  02_video_detect_migration.md  03_camera_detect_migration.md  04_camera_profile_v4l2_rga_summary.md  05_v4l2_rga_realtime_preprocess.md  06_v4l2_rga_rknn_detect.md  07_model_internal_profile_summary.md  08_mpp_encode_record.md  09_hls_stream_preview,md  10_rtsp_stream_preview.md
rk3588_ai_stream/include/: v4l2_mplane_capture.hpp
rk3588_ai_stream/output/exp04_camera_profile/: profile_camera_60.csv  profile_nowrite_60.csv  profile_setcap_60.csv  profile_setcap_nowrite_60.csv
rk3588_ai_stream/output/exp04_v4l2_nv12_save/: frame_1280x720.nv12
rk3588_ai_stream/output/exp05_v4l2_rga_realtime/: last.rgb  profile_v4l2_rga.csv
rk3588_ai_stream/output/exp06_rga_nv12_to_rgb/: frame_1280x720.rgb
rk3588_ai_stream/output/exp06_v4l2_rga_rknn/: profile_v4l2_rga_rknn.csv
rk3588_ai_stream/output/exp06_v4l2_rga_rknn_nosnap/: profile_v4l2_rga_rknn_nosnap.csv
rk3588_ai_stream/output/exp07_branch_decode_profile/: profile_branch_decode.csv
rk3588_ai_stream/output/exp07_clean06_release_perf/: profile_clean06_release_perf.csv
rk3588_ai_stream/output/exp07_model_internal_profile/: profile_model_internal.csv
rk3588_ai_stream/output/exp07_o3_perf_check/: profile.csv
rk3588_ai_stream/output/exp07_o3_performance_governor/: profile.csv
rk3588_ai_stream/output/exp07_postprocess_profile/: profile_postprocess.csv
rk3588_ai_stream/output/exp07_process_i8_profile/: profile_process_i8.csv
rk3588_ai_stream/scripts/: exp08_2_v4l2_fifo_mpp.sh  exp08_3_detect_fifo_mpp.sh  exp08_4_detect_fifo_mpp_clean.sh  exp08_mpp_probe.sh  exp09_0_stream_probe.sh  exp09_1_hls_file_preview.sh  exp09_2_realtime_detect_hls.sh  exp10_0_rtsp_probe_and_mediamtx.sh  exp10_1_rtsp_file_preview.sh  exp10_2_realtime_detect_rtsp.sh  exp10_3_rtsp_lowdelay_compare.sh  exp10_4_rtsp_tcp_stability.sh
rk3588_ai_stream/src/: main_camera.cpp  main_camera_capture_profile.cpp  main_camera_profile.cpp  main_camera_profile_nowrite.cpp  main_camera_profile_setcap.cpp  main_camera_profile_setcap_nowrite.cpp  main_image.cpp  main_rga_nv12_to_rgb.cpp  main_v4l2_capture_profile.cpp  main_v4l2_dump_nv12.cpp  main_v4l2_rga_realtime_preprocess.cpp  main_v4l2_rga_rknn_detect.cpp  main_v4l2_rga_rknn_detect_to_nv12.cpp  main_v4l2_rga_rknn_detect_to_nv12_clean.cpp  main_video.cpp  postprocess_profile.cc  postprocess_profile.cc.bak_07_1  postprocess_profile.cc.bak_07_2  yolo11_profile.cc
